client/src/components/content/session/StatusBar.scss
@use '../../../assets/styles/config.scss' as *;

.StatusBar {
  @keyframes rotate {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }

  cursor: help;
  display: grid;
  grid-template-columns: 1fr auto;
  gap: 0.5em;

  // Non-overflow messages only.
  & > .Message,
  .Indicator {
    height: 20px;
    line-height: 20px;
  }

  // Non-overflow messages only.
  & > .Message {
    text-align: right;
  }

  .Indicator {
    box-sizing: border-box;
    width: 20px;
  }

  .Overflow {
    display: flex;
    justify-content: flex-end;
    justify-self: flex-end;
    grid-column: 1 / 3;
    position: relative;
    z-index: $z-index-tooltips;
    width: 0;
    overflow: visible;

    .OverflowContent {
      border: 2.5px solid $color-primary-light;
      border-radius: 10px;
      padding: 12px 20px 20px;
      background-color: rgba($color-accent-dark, 0.925);

      > * {
        width: 30em;
      }

      .Heading {
        margin: 1.25em 0 0.5em;
        font-size: 1.1em;
        font-weight: 700;
      }

      .Connection {
        display: grid;
        grid-template-columns: 1fr auto;
        row-gap: 1.25em;

        .Heading {
          margin-top: 0.6em;
          margin-bottom: 0;
        }

        .Status {
          display: inline-block;
          position: relative;
          margin: 0.3em 0 0 0.75em;
          padding: 0.25em 0.55em 0.25em;
          font-style: italic;
          background-color: rgba($color-secondary, 0.65);
          border: 2px solid rgba($color-accent, 0.45);
          border-radius: 7px;
        }

        .Message {
          grid-column: 1 / 3;
        }
      }

      .PendingTasks {
        .Messages {
          display: flex;
          flex-direction: column-reverse;
          margin: 0;
          padding: 0;

          .Message {
            margin: 0.4em 0;
            padding: 0;
            list-style-position: inside;
          }
        }
      }
    }
  }

  // Hide the overflow when the status is not
  // hovered upon.
  &:not(:hover) {
    .Overflow {
      display: none;
    }
  }

  // Style for when the status is open and has no pending
  // requests with the server.
  &.Open:not(.Pending) .Indicator {
    background-color: $color-success;
    border-radius: 50%;
    border: 2px solid $color-accent-light;
  }

  // Style for when the client has a pending request with
  // the server or when the connection has dropped and is
  // reconnecting.
  &.Pending .Indicator,
  &.Connecting .Indicator {
    background: url(../../../assets/images/icons/pending.png);
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    animation-name: rotate;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
  }

  // Style for when the connection has dropped and is
  // not reconnecting (Theoretically, this should never
  // happen).
  &.Closed .Indicator {
    background-color: $color-failure-dark;
    border-radius: 50%;
    border: 2px solid white;
  }
}

